...
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jh9-gl-klb">
                                        <rect key="frame" x="0.0" y="168" width="300" height="32"/>
                                        <state key="normal" title="Submit"/>
                                        <connections>
                                            <segue destination="7Ut-qT-KCW" kind="showDetail" id="8eb-Hj-PqG"/>
                                        </connections>
                                    </button>
                                </subviews>
                                <constraints>
...
                            </stackView>
                            <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="LWI-Cp-eC4">
                                <rect key="frame" x="100" y="691.5" width="215" height="30"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Q1b-Cs-Dnu">
                                        <rect key="frame" x="0.0" y="0.0" width="76" height="30"/>
                                        <state key="normal" title="View Tasks">
                                            <color key="titleShadowColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
                                        <connections>
                                            <segue destination="GSU-nz-D0H" kind="showDetail" id="d62-Zx-pu4"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WBZ-g9-j2Q">
                                        <rect key="frame" x="126" y="0.0" width="89" height="30"/>
                                        <state key="normal" title="Create Tasks"/>
                                        <connections>
                                            <segue destination="OVc-Tw-7FK" kind="showDetail" id="ryo-D5-Ajf"/>
                                        </connections>
                                    </button>
                                </subviews>
                                <color key="backgroundColor" cocoaTouchSystemColor="lightTextColor"/>
...
                                        </subviews>
                                    </stackView>
                                </subviews>
                            </stackView>
                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZC6-u1-ABn">
                                <rect key="frame" x="176" y="757" width="41" height="0.0"/>
                                <state key="normal" title="Home"/>
                                <connections>
                                    <segue destination="7Ut-qT-KCW" kind="showDetail" identifier="taskView" id="GqD-q0-Ogc"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
